test/invalid/FieldRedefinitionSameType/FieldRedefinitionSameType.plume
/**
 * Redeclaracao de um field com o mesmo tipo
 *
 * @author 37059, Rita Henriques
 * @version $Id: FieldRedefinitionSameType.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class FieldRedefinitionSameType extends Object is
  
  field tipo : String
  field tipo : String
  
  method getTipo : () -> Object is
		tipo
